--- a/templates/books/listar_libros.html
+++ b/templates/books/listar_libros.html
@@ -7,8 +7,8 @@
     <div class="col-md-4 mb-4">
         <div class="card h-100 shadow-sm rounded-4">
             <div class="card-body">
-                <h5 class="card-title text-primary fw-bold">{{ libro.titulo
-                    }}</h5>
+                <h5
+                    class="card-title text-primary fw-bold">{{libro.titulo}}</h5>
                 <p><strong>Autor:</strong> {{ libro.autor }}</p>
                 <p><strong>Año:</strong> {{ libro.ano_publicacion }}</p>
                 <p><strong>Stock:</strong> {{ libro.stock }}</p>
